# Loan-Granting-Problem

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py  train.py
src/loan_granting/: __init__.py  config.py  data_generator.py  data_loader.py  modeling.py  predict.py
