[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-granting"
version = "0.1.0"
description = "End-to-end loan granting prediction system with Streamlit UI."
authors = [
  {name = "Loan Granting Team"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.20.0",
  "pandas>=2.0.0",
  "numpy>=1.25.0",
  "scikit-learn>=1.4.0",
  "joblib>=1.3.0",
  "python-dateutil>=2.8.0",
]

[project.urls]
Home = "https://github.com/Mufasa1107/Loan-Granting-Problem"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["loan_granting"]
